@@ -19,21 +19,21 @@
 
 package org.apache.fory.reflect;
 
-import java.lang.annotation.Annotation;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles.Lookup;
 import java.lang.invoke.MethodType;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.lang.reflect.Parameter;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import org.apache.fory.annotation.ForyField;
+import org.apache.fory.annotation.ForyConstructor;
 import org.apache.fory.collection.ClassValueCache;
 import org.apache.fory.collection.Tuple2;
 import org.apache.fory.exception.ForyException;
@@ -41,10 +41,10 @@ import org.apache.fory.platform.AndroidSupport;
 import org.apache.fory.platform.GraalvmSupport;
 import org.apache.fory.platform.JdkVersion;
 import org.apache.fory.platform.internal._JDKAccess;
+import org.apache.fory.resolver.TypeResolver;
 import org.apache.fory.type.Descriptor;
 import org.apache.fory.type.TypeUtils;
 import org.apache.fory.util.record.RecordUtils;
-import sun.misc.Unsafe;
 
 /**
  * Factory class for creating and caching {@link ObjectCreator} instances.
@@ -60,8 +60,6 @@ import sun.misc.Unsafe;
  *       DeclaredNoArgCtrObjectCreator} with MethodHandle for fast invocation
  *   <li><strong>Classes without accessible constructors:</strong> Uses a private
  *       constructor-bypassing creator on runtimes where that is still supported
- *   <li><strong>GraalVM native image compatibility:</strong> Uses {@link
- *       ParentNoArgCtrObjectCreator} for constructor generate-based creation when needed
  *   <li><strong>Android compatibility:</strong> Uses reflection for records and no-arg
  *       constructors, and throws when no supported reflective construction path exists
  * </ul>
@@ -74,7 +72,6 @@ import sun.misc.Unsafe;
  */
 @SuppressWarnings("unchecked")
 public class ObjectCreators {
-  private static final Unsafe UNSAFE = AndroidSupport.IS_ANDROID ? null : _JDKAccess.UNSAFE;
   private static final ClassValueCache<ObjectCreator<?>> cache =
       ClassValueCache.newClassKeySoftCache(8);
 
@@ -92,24 +89,21 @@ public class ObjectCreators {
    *     GraalVM native image)
    */
   public static <T> ObjectCreator<T> getObjectCreator(Class<T> type) {
-    return (ObjectCreator<T>) cache.get(type, () -> creategetObjectCreator(type));
+    return (ObjectCreator<T>) cache.get(type, () -> createObjectCreator(type, null));
   }
 
-  private static <T> T allocateInstance(Class<T> type) {
-    if (UNSAFE == null || JdkVersion.MAJOR_VERSION >= 25) {
-      throw new ForyException(
-          "Constructor-bypassing allocation is unsupported in this runtime for " + type);
-    }
-    try {
-      return (T) UNSAFE.allocateInstance(type);
-    } catch (InstantiationException e) {
-      throw new ForyException("Failed to allocate instance for " + type, e);
-    }
+  public static <T> ObjectCreator<T> getObjectCreator(TypeResolver typeResolver, Class<T> type) {
+    return typeResolver.getSharedRegistry().getObjectCreatorRegistry().getObjectCreator(type);
   }
 
-  private static <T> ObjectCreator<T> creategetObjectCreator(Class<T> type) {
+  static <T> ObjectCreator<T> createObjectCreator(
+      Class<T> type, ConstructorMatch<T> registeredConstructor) {
     if (RecordUtils.isRecord(type)) {
       return new RecordObjectCreator<>(type);
+    }
+    ConstructorMatch<T> explicitConstructor = explicitConstructor(type, registeredConstructor);
+    if (explicitConstructor != null) {
+      return new ConstructorObjectCreator<>(type, explicitConstructor);
     }
     Constructor<T> noArgConstructor = ReflectionUtils.getNoArgConstructor(type);
     if (AndroidSupport.IS_ANDROID) {
@@ -118,9 +112,6 @@ public class ObjectCreators {
       }
       return new UnsupportedObjectCreator<>(
           type, "Android cannot create " + type + " without an accessible no-arg constructor");
-    }
-    if (JdkVersion.MAJOR_VERSION >= 25 && noArgConstructor == null) {
-      return new ConstructorObjectCreator<>(type);
     }
     if (GraalvmSupport.IN_GRAALVM_NATIVE_IMAGE) {
       if (noArgConstructor != null) {
@@ -135,109 +126,121 @@ public class ObjectCreators {
     return new DeclaredNoArgCtrObjectCreator<>(type);
   }
 
-  public static boolean supportsJdk25Creation(Class<?> type) {
-    if (JdkVersion.MAJOR_VERSION < 25 || RecordUtils.isRecord(type)) {
-      return true;
-    }
-    try {
-      ObjectCreator<?> creator = creategetObjectCreator(type);
-      return !(creator instanceof UnsupportedObjectCreator);
-    } catch (RuntimeException e) {
-      return false;
-    }
-  }
-
-  private static final class ConstructorMatch<T> {
+  static final class ConstructorMatch<T> {
     private final Constructor<T> constructor;
     private final String[] fieldNames;
     private final Class<?>[] declaringClasses;
     private final Class<?>[] fieldTypes;
     private final boolean[] finalFields;
-    private final int score;
 
     private ConstructorMatch(
         Constructor<T> constructor,
         String[] fieldNames,
         Class<?>[] declaringClasses,
         Class<?>[] fieldTypes,
-        boolean[] finalFields,
-        int score) {
+        boolean[] finalFields) {
       this.constructor = constructor;
       this.fieldNames = fieldNames;
       this.declaringClasses = declaringClasses;
       this.fieldTypes = fieldTypes;
       this.finalFields = finalFields;
-      this.score = score;
     }
   }
 
-  private static <T> ConstructorMatch<T> findConstructor(Class<T> type) {
+  private static <T> ConstructorMatch<T> explicitConstructor(
+      Class<T> type, ConstructorMatch<T> registeredConstructor) {
+    if (registeredConstructor != null) {
+      return registeredConstructor;
+    }
+    Constructor<?> annotatedConstructor = null;
+    ForyConstructor annotation = null;
+    for (Constructor<?> constructor : type.getDeclaredConstructors()) {
+      ForyConstructor currentAnnotation = constructor.getAnnotation(ForyConstructor.class);
+      if (currentAnnotation == null) {
+        continue;
+      }
+      if (annotatedConstructor != null) {
+        throw new ForyException(type + " must not declare more than one @ForyConstructor");
+      }
+      annotatedConstructor = constructor;
+      annotation = currentAnnotation;
+    }
+    if (annotatedConstructor == null) {
+      return null;
+    }
+    return explicitConstructor(
+        type, (Constructor<T>) annotatedConstructor, annotation.value(), "@ForyConstructor");
+  }
+
+  static <T> ConstructorMatch<T> explicitConstructor(
+      Class<T> type, Constructor<T> constructor, String[] fieldNames, String source) {
+    if (constructor.getDeclaringClass() != type) {
+      throw new ForyException(
+          source + " constructor " + constructor + " does not belong to " + type);
+    }
+    if (fieldNames.length != constructor.getParameterCount()) {
+      throw new ForyException(
+          source
+              + " constructor "
+              + constructor
+              + " maps "
+              + fieldNames.length
+              + " fields to "
+              + constructor.getParameterCount()
+              + " parameters");
+    }
+    ConstructorMatch<T> match =
+        matchConstructorFields(
+            constructor, fieldsByExplicitNames(type, constructor, fieldNames, source));
+    if (match == null) {
+      throw new ForyException(
+          source
+              + " constructor "
+              + constructor
+              + " parameter types do not match fields "
+              + Arrays.toString(fieldNames));
+    }
+    return match;
+  }
+
+  private static Field[] fieldsByExplicitNames(
+      Class<?> type, Constructor<?> constructor, String[] names, String source) {
     List<Field> fields = new ArrayList<>();
     fields.addAll(Descriptor.getFields(type));
     Map<String, Field> fieldsByName = new LinkedHashMap<>();
-    Map<String, List<Field>> fieldsByNameList = new LinkedHashMap<>();
-    Map<Integer, Field> fieldsById = new LinkedHashMap<>();
     Set<String> duplicateNames = new LinkedHashSet<>();
-    Set<Integer> duplicateIds = new LinkedHashSet<>();
     for (Field field : fields) {
-      fieldsByNameList.computeIfAbsent(field.getName(), name -> new ArrayList<>()).add(field);
       Field previous = fieldsByName.put(field.getName(), field);
       if (previous != null) {
         duplicateNames.add(field.getName());
       }
-      ForyField foryField = field.getAnnotation(ForyField.class);
-      if (foryField != null && foryField.id() >= 0) {
-        previous = fieldsById.put(foryField.id(), field);
-        if (previous != null) {
-          duplicateIds.add(foryField.id());
-        }
+    }
+    Field[] constructorFields = new Field[names.length];
+    Set<String> seenNames = new LinkedHashSet<>();
+    for (int i = 0; i < names.length; i++) {
+      String name = names[i];
+      if (!seenNames.add(name)) {
+        throw new ForyException(
+            source + " constructor " + constructor + " maps " + name + " twice");
       }
-    }
-    ConstructorMatch<T> best = null;
-    for (Constructor<?> constructor : type.getDeclaredConstructors()) {
-      if (constructor.isSynthetic()) {
-        continue;
+      if (duplicateNames.contains(name)) {
+        throw new ForyException(
+            source
+                + " constructor "
+                + constructor
+                + " cannot bind duplicate field name "
+                + name
+                + " in "
+                + type);
       }
-      ConstructorMatch<T> match =
-          matchConstructor(
-              type,
-              (Constructor<T>) constructor,
-              fieldsByName,
-              fieldsByNameList,
-              fieldsById,
-              duplicateNames,
-              duplicateIds);
-      if (match != null && (best == null || match.score > best.score)) {
-        best = match;
+      Field field = fieldsByName.get(name);
+      if (field == null) {
+        throw new ForyException(
+            source + " constructor " + constructor + " maps unknown field " + name);
       }
+      constructorFields[i] = field;
     }
-    if (best == null) {
-      throw new ForyException(
-          "JDK25 zero-Unsafe mode requires "
-              + "a bindable constructor because no no-arg constructor is available"
-              + " for "
-              + type
-              + ". Annotate the constructor with java.beans.ConstructorProperties or compile "
-              + "the class with -parameters.");
-    }
-    return best;
-  }
-
-  private static <T> ConstructorMatch<T> matchConstructor(
-      Class<T> type,
-      Constructor<T> constructor,
-      Map<String, Field> fieldsByName,
-      Map<String, List<Field>> fieldsByNameList,
-      Map<Integer, Field> fieldsById,
-      Set<String> duplicateNames,
-      Set<Integer> duplicateIds) {
-    Field[] fields =
-        constructorFields(
-            constructor, fieldsByName, fieldsByNameList, fieldsById, duplicateNames, duplicateIds);
-    if (fields == null) {
-      return null;
-    }
-    return matchConstructorFields(constructor, fields);
+    return constructorFields;
   }
 
   private static <T> ConstructorMatch<T> matchConstructorFields(
@@ -258,103 +261,7 @@ public class ObjectCreators {
       finalFieldFlags[i] = Modifier.isFinal(field.getModifiers());
     }
     return new ConstructorMatch<>(
-        constructor, names, declaringClasses, fieldTypes, finalFieldFlags, 300 - fields.length);
-  }
-
-  private static Field[] constructorFields(
-      Constructor<?> constructor,
-      Map<String, Field> fieldsByName,
-      Map<String, List<Field>> fieldsByNameList,
-      Map<Integer, Field> fieldsById,
-      Set<String> duplicateNames,
-      Set<Integer> duplicateIds) {
-    Field[] fields = fieldsByForyFieldId(constructor, fieldsById, duplicateIds);
-    if (fields != null) {
-      return fields;
-    }
-    String[] names = constructorFieldNames(constructor);
-    if (names != null) {
-      if (names.length != constructor.getParameterCount()) {
-        return null;
-      }
-      return fieldsByName(constructor, fieldsByName, fieldsByNameList, duplicateNames, names);
-    }
-    return null;
-  }
-
-  private static Field[] fieldsByForyFieldId(
-      Constructor<?> constructor, Map<Integer, Field> fieldsById, Set<Integer> duplicateIds) {
-    Parameter[] parameters = constructor.getParameters();
-    Field[] fields = new Field[parameters.length];
-    boolean hasForyFieldId = false;
-    for (int i = 0; i < parameters.length; i++) {
-      ForyField foryField = parameters[i].getAnnotation(ForyField.class);
-      if (foryField == null || foryField.id() < 0) {
-        continue;
-      }
-      hasForyFieldId = true;
-      int id = foryField.id();
-      if (duplicateIds.contains(id)) {
-        throw new ForyException("Constructor parameter id " + id + " is ambiguous");
-      }
-      fields[i] = fieldsById.get(id);
-      if (fields[i] == null) {
-        return null;
-      }
-    }
-    if (!hasForyFieldId) {
-      return null;
-    }
-    for (Field field : fields) {
-      if (field == null) {
-        return null;
-      }
-    }
-    return fields;
-  }
-
-  private static Field[] fieldsByName(
-      Constructor<?> constructor,
-      Map<String, Field> fieldsByName,
-      Map<String, List<Field>> fieldsByNameList,
-      Set<String> duplicateNames,
-      String[] names) {
-    Field[] fields = new Field[names.length];
-    for (int i = 0; i < names.length; i++) {
-      String name = names[i];
-      if (duplicateNames.contains(name)) {
-        Field field = syntheticField(constructor, fieldsByNameList.get(name));
-        if (field == null) {
-          throw new ForyException(
-              "Constructor parameter "
-                  + name
-                  + " is ambiguous because "
-                  + constructor.getDeclaringClass()
-                  + " has duplicate field names");
-        }
-        fields[i] = field;
-        continue;
-      }
-      Field field = fieldsByName.get(name);
-      if (field == null) {
-        return null;
-      }
-      fields[i] = field;
-    }
-    return fields;
-  }
-
-  private static Field syntheticField(Constructor<?> constructor, List<Field> fields) {
-    if (fields == null) {
-      return null;
-    }
-    Class<?> declaringClass = constructor.getDeclaringClass();
-    for (Field field : fields) {
-      if (field.isSynthetic() && field.getDeclaringClass() == declaringClass) {
-        return field;
-      }
-    }
-    return null;
+        constructor, names, declaringClasses, fieldTypes, finalFieldFlags);
   }
 
   private static boolean constructorTypeMatches(Class<?> parameterType, Field field) {
@@ -363,45 +270,16 @@ public class ObjectCreators {
     return boxedParameterType.isAssignableFrom(boxedFieldType);
   }
 
-  private static String[] constructorFieldNames(Constructor<?> constructor) {
-    String[] names = constructorProperties(constructor);
-    if (names != null) {
-      return names;
-    }
-    Parameter[] parameters = constructor.getParameters();
-    for (Parameter parameter : parameters) {
-      if (!parameter.isNamePresent()) {
-        return null;
-      }
-    }
-    names = new String[parameters.length];
-    for (int i = 0; i < parameters.length; i++) {
-      names[i] = parameters[i].getName();
-    }
-    return names;
-  }
-
-  private static String[] constructorProperties(Constructor<?> constructor) {
-    for (Annotation annotation : constructor.getDeclaredAnnotations()) {
-      if ("java.beans.ConstructorProperties".equals(annotation.annotationType().getName())) {
-        try {
-          return (String[]) annotation.annotationType().getMethod("value").invoke(annotation);
-        } catch (ReflectiveOperationException e) {
-          throw new ForyException("Failed to read ConstructorProperties for " + constructor, e);
-        }
-      }
-    }
-    return null;
-  }
-
   private static MethodHandle constructorHandle(Class<?> type, Constructor<?> constructor) {
     Lookup lookup = _JDKAccess._trustedLookup(type);
     if (lookup == null) {
       return null;
     }
     try {
-      return lookup.findConstructor(
-          type, MethodType.methodType(void.class, constructor.getParameterTypes()));
+      MethodHandle handle =
+          lookup.findConstructor(
+              type, MethodType.methodType(void.class, constructor.getParameterTypes()));
+      return handle.asSpreader(Object[].class, constructor.getParameterCount());
     } catch (NoSuchMethodException | IllegalAccessException e) {
       return null;
     }
@@ -462,9 +340,8 @@ public class ObjectCreators {
     private final Class<?>[] fieldTypes;
     private final boolean[] finalFields;
 
-    private ConstructorObjectCreator(Class<T> type) {
+    private ConstructorObjectCreator(Class<T> type, ConstructorMatch<T> match) {
       super(type);
-      ConstructorMatch<T> match = findConstructor(type);
       constructor = match.constructor;
       handle = constructorHandle(type, constructor);
       fieldNames = match.fieldNames;
@@ -485,22 +362,22 @@ public class ObjectCreators {
 
     @Override
     public String[] getConstructorFieldNames() {
-      return fieldNames;
+      return fieldNames.clone();
     }
 
     @Override
     public Class<?>[] getConstructorFieldDeclaringClasses() {
-      return declaringClasses;
+      return declaringClasses.clone();
     }
 
     @Override
     public Class<?>[] getConstructorFieldTypes() {
-      return fieldTypes;
+      return fieldTypes.clone();
     }
 
     @Override
     public boolean[] getConstructorFieldFinal() {
-      return finalFields;
+      return finalFields.clone();
     }
 
     @Override
@@ -535,7 +412,7 @@ public class ObjectCreators {
         if (handle == null) {
           return constructor.newInstance(arguments);
         }
-        return (T) handle.invokeWithArguments(arguments);
+        return (T) handle.invoke(arguments);
       } catch (Throwable e) {
         throw new ForyException("Failed to create instance using constructor: " + type, e);
       }
@@ -550,7 +427,7 @@ public class ObjectCreators {
 
     @Override
     public T newInstance() {
-      return ObjectCreators.allocateInstance(type);
+      return UnsafeObjectAllocator.allocate(type);
     }
 
     @Override
@@ -590,7 +467,10 @@ public class ObjectCreators {
       super(type);
       Tuple2<Constructor, MethodHandle> tuple2 = RecordUtils.getRecordConstructor(type);
       constructor = tuple2.f0;
-      handle = tuple2.f1;
+      handle =
+          tuple2.f1 == null
+              ? null
+              : tuple2.f1.asSpreader(Object[].class, constructor.getParameterCount());
       if (AndroidSupport.IS_ANDROID
           || (GraalvmSupport.IN_GRAALVM_NATIVE_IMAGE && JdkVersion.MAJOR_VERSION >= 25)) {
         try {
@@ -617,7 +497,7 @@ public class ObjectCreators {
           return (T) constructor.newInstance(arguments);
         } else {
           // Regular path: use method handle
-          return (T) handle.invokeWithArguments(arguments);
+          return (T) handle.invoke(arguments);
         }
       } catch (Throwable e) {
         throw new ForyException("Failed to create record instance: " + type, e);
@@ -627,42 +507,32 @@ public class ObjectCreators {
 
   public static final class ParentNoArgCtrObjectCreator<T> extends ObjectCreator<T> {
     private static volatile Object reflectionFactory;
-    private static volatile MethodHandle newConstructorForSerializationMethod;
+    private static volatile Method newConstructorForSerializationMethod;
 
     private final Constructor<T> constructor;
 
     public ParentNoArgCtrObjectCreator(Class<T> type) {
       super(type);
+      if (JdkVersion.MAJOR_VERSION >= 25) {
+        throw new ForyException(
+            "ReflectionFactory object creation is unavailable in JDK25+ zero-Unsafe mode for "
+                + type);
+      }
       this.constructor = createSerializationConstructor(type);
     }
 
     private static <T> Constructor<T> createSerializationConstructor(Class<T> type) {
       try {
-        // Get ReflectionFactory instance
         if (reflectionFactory == null) {
-          Class<?> reflectionFactoryClass;
-          if (JdkVersion.MAJOR_VERSION >= 9) {
-            reflectionFactoryClass = Class.forName("jdk.internal.reflect.ReflectionFactory");
-          } else {
-            reflectionFactoryClass = Class.forName("sun.reflect.ReflectionFactory");
-          }
-          Lookup lookup = _JDKAccess._trustedLookup(reflectionFactoryClass);
-          MethodHandle handle =
-              lookup.findStatic(
-                  reflectionFactoryClass,
-                  "getReflectionFactory",
-                  MethodType.methodType(reflectionFactoryClass));
-          reflectionFactory = handle.invoke();
+          Class<?> reflectionFactoryClass = Class.forName("sun.reflect.ReflectionFactory");
+          Method getReflectionFactory = reflectionFactoryClass.getMethod("getReflectionFactory");
+          reflectionFactory = getReflectionFactory.invoke(null);
           newConstructorForSerializationMethod =
-              lookup.findVirtual(
-                  reflectionFactoryClass,
-                  "newConstructorForSerialization",
-                  MethodType.methodType(Constructor.class, Class.class, Constructor.class));
+              reflectionFactoryClass.getMethod(
+                  "newConstructorForSerialization", Class.class, Constructor.class);
         }
-        // Find a public no-arg constructor in parent classes that we can use as a template
         Constructor<?> parentConstructor = findPublicNoArgConstructor(type);
         if (parentConstructor == null) {
-          // Use Object's constructor as fallback
           parentConstructor = Object.class.getDeclaredConstructor();
         } else {
           try {
@@ -671,7 +541,6 @@ public class ObjectCreators {
             parentConstructor = Object.class.getDeclaredConstructor();
           }
         }
-        // Create serialization constructor using ReflectionFactory
         return (Constructor<T>)
             newConstructorForSerializationMethod.invoke(reflectionFactory, type, parentConstructor);
       } catch (Throwable e) {
@@ -685,7 +554,7 @@ public class ObjectCreators {
       while (current != null && current != Object.class) {
         try {
           Constructor<?> constructor = current.getDeclaredConstructor();
-          if (constructor.getModifiers() == java.lang.reflect.Modifier.PUBLIC) {
+          if (Modifier.isPublic(constructor.getModifiers())) {
             return constructor;
           }
         } catch (NoSuchMethodException ignored) {
