@@ -19,238 +19,21 @@
 
 package org.apache.fory.reflect;
 
-import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
-import java.lang.invoke.MethodType;
 import java.lang.invoke.VarHandle;
 import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.util.function.Function;
-import java.util.function.Predicate;
-import java.util.function.ToDoubleFunction;
-import java.util.function.ToIntFunction;
-import java.util.function.ToLongFunction;
-import org.apache.fory.exception.ForyException;
-import org.apache.fory.platform.AndroidSupport;
 import org.apache.fory.platform.GraalvmSupport;
+import org.apache.fory.platform.JdkVersion;
 import org.apache.fory.platform.internal._JDKAccess;
 import org.apache.fory.type.TypeUtils;
 import org.apache.fory.util.Preconditions;
-import org.apache.fory.util.function.ToByteFunction;
-import org.apache.fory.util.function.ToCharFunction;
-import org.apache.fory.util.function.ToFloatFunction;
-import org.apache.fory.util.function.ToShortFunction;
-import org.apache.fory.util.record.RecordUtils;
 
-/** Field accessor for primitive types and object types. */
-@SuppressWarnings({"unchecked", "rawtypes"})
-public abstract class FieldAccessor {
-  private static final int BOOLEAN_ACCESS = 1;
-  private static final int BYTE_ACCESS = 2;
-  private static final int CHAR_ACCESS = 3;
-  private static final int SHORT_ACCESS = 4;
-  private static final int INT_ACCESS = 5;
-  private static final int LONG_ACCESS = 6;
-  private static final int FLOAT_ACCESS = 7;
-  private static final int DOUBLE_ACCESS = 8;
-  private static final int OBJECT_ACCESS = 9;
+final class FieldAccessorStrategy {
+  private FieldAccessorStrategy() {}
 
-  protected final Field field;
-  // Kept to preserve the root FieldAccessor shape for already compiled internal subclasses.
-  // JDK25 access is field-owned through VarHandle/MethodHandle and intentionally never uses it.
-  protected final long fieldOffset;
-  private final int accessKind;
-
-  public FieldAccessor(Field field) {
-    this(field, -1);
-  }
-
-  protected FieldAccessor(Field field, long fieldOffset) {
-    this.field = field;
-    this.fieldOffset = fieldOffset;
-    Preconditions.checkNotNull(field);
-    this.accessKind = accessKind(field);
-  }
-
-  private static int accessKind(Field field) {
-    Class<?> fieldType = field.getType();
-    if (fieldType == boolean.class) {
-      return BOOLEAN_ACCESS;
-    } else if (fieldType == byte.class) {
-      return BYTE_ACCESS;
-    } else if (fieldType == char.class) {
-      return CHAR_ACCESS;
-    } else if (fieldType == short.class) {
-      return SHORT_ACCESS;
-    } else if (fieldType == int.class) {
-      return INT_ACCESS;
-    } else if (fieldType == long.class) {
-      return LONG_ACCESS;
-    } else if (fieldType == float.class) {
-      return FLOAT_ACCESS;
-    } else if (fieldType == double.class) {
-      return DOUBLE_ACCESS;
-    }
-    return OBJECT_ACCESS;
-  }
-
-  public abstract Object get(Object obj);
-
-  public void set(Object obj, Object value) {
-    throw new UnsupportedOperationException("Unsupported for field " + field);
-  }
-
-  public final void copy(Object sourceObject, Object targetObject) {
-    switch (accessKind) {
-      case BOOLEAN_ACCESS:
-        putBoolean(targetObject, getBoolean(sourceObject));
-        return;
-      case BYTE_ACCESS:
-        putByte(targetObject, getByte(sourceObject));
-        return;
-      case CHAR_ACCESS:
-        putChar(targetObject, getChar(sourceObject));
-        return;
-      case SHORT_ACCESS:
-        putShort(targetObject, getShort(sourceObject));
-        return;
-      case INT_ACCESS:
-        putInt(targetObject, getInt(sourceObject));
-        return;
-      case LONG_ACCESS:
-        putLong(targetObject, getLong(sourceObject));
-        return;
-      case FLOAT_ACCESS:
-        putFloat(targetObject, getFloat(sourceObject));
-        return;
-      case DOUBLE_ACCESS:
-        putDouble(targetObject, getDouble(sourceObject));
-        return;
-      default:
-        putObject(targetObject, getObject(sourceObject));
-    }
-  }
-
-  public final void copyObject(Object sourceObject, Object targetObject) {
-    putObject(targetObject, getObject(sourceObject));
-  }
-
-  public Field getField() {
-    return field;
-  }
-
-  public boolean getBoolean(Object targetObject) {
-    return (Boolean) get(targetObject);
-  }
-
-  public void putBoolean(Object targetObject, boolean value) {
-    set(targetObject, value);
-  }
-
-  public byte getByte(Object targetObject) {
-    return (Byte) get(targetObject);
-  }
-
-  public void putByte(Object targetObject, byte value) {
-    set(targetObject, value);
-  }
-
-  public char getChar(Object targetObject) {
-    return (Character) get(targetObject);
-  }
-
-  public void putChar(Object targetObject, char value) {
-    set(targetObject, value);
-  }
-
-  public short getShort(Object targetObject) {
-    return (Short) get(targetObject);
-  }
-
-  public void putShort(Object targetObject, short value) {
-    set(targetObject, value);
-  }
-
-  public int getInt(Object targetObject) {
-    return (Integer) get(targetObject);
-  }
-
-  public void putInt(Object targetObject, int value) {
-    set(targetObject, value);
-  }
-
-  public long getLong(Object targetObject) {
-    return (Long) get(targetObject);
-  }
-
-  public void putLong(Object targetObject, long value) {
-    set(targetObject, value);
-  }
-
-  public float getFloat(Object targetObject) {
-    return (Float) get(targetObject);
-  }
-
-  public void putFloat(Object targetObject, float value) {
-    set(targetObject, value);
-  }
-
-  public double getDouble(Object targetObject) {
-    return (Double) get(targetObject);
-  }
-
-  public void putDouble(Object targetObject, double value) {
-    set(targetObject, value);
-  }
-
-  public final void putObject(Object targetObject, Object object) {
-    set(targetObject, object);
-  }
-
-  public final Object getObject(Object targetObject) {
-    return get(targetObject);
-  }
-
-  void checkObj(Object obj) {
-    if (!this.field.getDeclaringClass().isAssignableFrom(obj.getClass())) {
-      throw new IllegalArgumentException("Illegal class " + obj.getClass());
-    }
-  }
-
-  @Override
-  public String toString() {
-    return field.toString();
-  }
-
-  public abstract static class FieldGetter extends FieldAccessor {
-
-    private final Object getter;
-
-    protected FieldGetter(Field field, Object getter) {
-      super(field, -1);
-      this.getter = getter;
-    }
-
-    public Object getGetter() {
-      return getter;
-    }
-  }
-
-  public static FieldAccessor createAccessor(Field field) {
+  static FieldAccessor createAccessor(Field field) {
     Preconditions.checkArgument(!Modifier.isStatic(field.getModifiers()), field);
-    if (RecordUtils.isRecord(field.getDeclaringClass())) {
-      if (AndroidSupport.IS_ANDROID || GraalvmSupport.IN_GRAALVM_NATIVE_IMAGE) {
-        return new ReflectiveRecordFieldAccessor(field);
-      }
-      return createRecordAccessor(field);
-    }
-    if (AndroidSupport.IS_ANDROID) {
-      // Android field access must stay reflection-owned: no Unsafe offsets, trusted lookups,
-      // generated accessors, or primitive-specific reflection subclasses.
-      return new ReflectionFieldAccessor(field);
-    }
     if (GraalvmSupport.isGraalBuildTime() || GraalvmSupport.IN_GRAALVM_NATIVE_IMAGE) {
       return new GeneratedAccessor(field);
     }
@@ -261,12 +44,8 @@ public abstract class FieldAccessor {
     return createVarHandleAccessor(field);
   }
 
-  public static FieldAccessor createStaticAccessor(Field field) {
+  static FieldAccessor createStaticAccessor(Field field) {
     Preconditions.checkArgument(Modifier.isStatic(field.getModifiers()), field);
-    if (AndroidSupport.IS_ANDROID) {
-      field.setAccessible(true);
-      return new ReflectiveStaticFieldAccessor(field);
-    }
     return createVarHandleAccessor(field);
   }
 
@@ -292,37 +71,14 @@ public abstract class FieldAccessor {
     }
   }
 
-  private static FieldAccessor createRecordAccessor(Field field) {
-    MethodHandle getter = recordGetter(field);
-    if (field.getType() == boolean.class) {
-      return new BooleanGetter(field, getter);
-    } else if (field.getType() == byte.class) {
-      return new ByteGetter(field, getter);
-    } else if (field.getType() == char.class) {
-      return new CharGetter(field, getter);
-    } else if (field.getType() == short.class) {
-      return new ShortGetter(field, getter);
-    } else if (field.getType() == int.class) {
-      return new IntGetter(field, getter);
-    } else if (field.getType() == long.class) {
-      return new LongGetter(field, getter);
-    } else if (field.getType() == float.class) {
-      return new FloatGetter(field, getter);
-    } else if (field.getType() == double.class) {
-      return new DoubleGetter(field, getter);
-    } else {
-      return new ObjectGetter(field, getter);
-    }
-  }
-
   private static VarHandle fieldHandle(Field field) {
     try {
       if (canUsePublicField(field)) {
         try {
           return findFieldHandle(MethodHandles.publicLookup(), field);
         } catch (IllegalAccessException ignored) {
-          // The package may be opened but not exported. Fall through to privateLookupIn so
-          // --add-opens still enables access for named-module users.
+          // Fall through to the JDK25 trusted lookup. It is enabled by opening
+          // java.base/java.lang.invoke to Fory, not by opening every target package.
         }
       }
       return findFieldHandle(privateLookup(field), field);
@@ -333,23 +89,6 @@ public abstract class FieldAccessor {
     }
   }
 
-  private static MethodHandle recordGetter(Field field) {
-    try {
-      if (Modifier.isPublic(field.getDeclaringClass().getModifiers())) {
-        try {
-          return findRecordGetter(MethodHandles.publicLookup(), field);
-        } catch (IllegalAccessException ignored) {
-          // The package may be opened but not exported. Fall through to privateLookupIn.
-        }
-      }
-      return findRecordGetter(privateLookup(field), field);
-    } catch (IllegalAccessException e) {
-      throw accessFailure(field, e);
-    } catch (NoSuchMethodException e) {
-      throw new IllegalStateException("Failed to find record accessor for field " + field, e);
-    }
-  }
-
   private static VarHandle findFieldHandle(MethodHandles.Lookup lookup, Field field)
       throws IllegalAccessException, NoSuchFieldException {
     if (Modifier.isStatic(field.getModifiers())) {
@@ -357,12 +96,6 @@ public abstract class FieldAccessor {
           field.getDeclaringClass(), field.getName(), field.getType());
     }
     return lookup.findVarHandle(field.getDeclaringClass(), field.getName(), field.getType());
-  }
-
-  private static MethodHandle findRecordGetter(MethodHandles.Lookup lookup, Field field)
-      throws IllegalAccessException, NoSuchMethodException {
-    return lookup.findVirtual(
-        field.getDeclaringClass(), field.getName(), MethodType.methodType(field.getType()));
   }
 
   private static MethodHandles.Lookup privateLookup(Field field) {
@@ -376,30 +109,12 @@ public abstract class FieldAccessor {
   }
 
   private static IllegalStateException accessFailure(Field field, Throwable cause) {
-    Class<?> declaringClass = field.getDeclaringClass();
-    Module targetModule = declaringClass.getModule();
-    Package targetPackage = declaringClass.getPackage();
-    String packageName = targetPackage == null ? "" : targetPackage.getName();
-    String openTarget =
-        moduleName(targetModule) + (packageName.isEmpty() ? "" : "/" + packageName);
     return new IllegalStateException(
         "Cannot access field "
             + field
-            + " because package "
-            + packageName
-            + " in module "
-            + moduleName(targetModule)
-            + " is not open to "
-            + moduleName(FieldAccessor.class.getModule())
-            + ". For named modules, open the package with --add-opens="
-            + openTarget
-            + "=org.apache.fory.core,org.apache.fory.format",
+            + ". JDK25 zero-Unsafe mode requires java.base/java.lang.invoke to be open "
+            + "to org.apache.fory.core",
         cause);
-  }
-
-  private static String moduleName(Module module) {
-    String name = module.getName();
-    return name == null ? "<unnamed>" : name;
   }
 
   private static UnsupportedOperationException unsupportedWrite(Field field, Throwable cause) {
@@ -408,175 +123,146 @@ public abstract class FieldAccessor {
   }
 
   private static IllegalStateException finalMutationFailure(Field field, Throwable cause) {
+    String versionMessage =
+        JdkVersion.MAJOR_VERSION >= 26
+            ? "On JDK26+, start the JVM with "
+                + "--enable-final-field-mutation=org.apache.fory.core, or ALL-UNNAMED "
+                + "when Fory is loaded from the classpath. "
+            : "";
     return new IllegalStateException(
         "Cannot write final field "
             + field
-            + ". On JDK25+, start the JVM with "
-            + "--enable-final-field-mutation=org.apache.fory.core and open the declaring "
-            + "package to org.apache.fory.core,org.apache.fory.format.",
+            + ". "
+            + versionMessage
+            + "The declaring package must be open to org.apache.fory.core when it is in a "
+            + "named module.",
         cause);
-  }
-
-  private static RuntimeException getterFailure(Field field, Throwable cause) {
-    return new RuntimeException("Failed to read record field: " + field, cause);
   }
 
   private static RuntimeException accessorFailure(Field field, Throwable cause) {
     return new RuntimeException("Failed to access field: " + field, cause);
   }
 
-  static final class ReflectiveRecordFieldAccessor extends FieldGetter {
-    private final Method accessor;
-
-    ReflectiveRecordFieldAccessor(Field field) {
-      super(field, null);
-      try {
-        accessor = field.getDeclaringClass().getDeclaredMethod(field.getName());
-        accessor.setAccessible(true);
-      } catch (NoSuchMethodException | RuntimeException e) {
-        throw new ForyException("Failed to create record field accessor for " + field, e);
-      }
-    }
-
-    @Override
-    public Object get(Object obj) {
-      checkObj(obj);
-      try {
-        return accessor.invoke(obj);
-      } catch (IllegalAccessException | IllegalArgumentException e) {
-        throw new ForyException("Failed to read record field reflectively: " + field, e);
-      } catch (InvocationTargetException e) {
-        throw new ForyException(
-            "Record accessor threw while reading field: " + field, e.getCause());
-      }
-    }
-
-    @Override
-    public void set(Object obj, Object value) {
-      throw new UnsupportedOperationException("Record field is read-only: " + field);
-    }
-  }
-
   private abstract static class VarHandleAccessor extends FieldAccessor {
     protected final VarHandle handle;
     protected final boolean isStatic;
     protected final boolean isFinal;
-    protected volatile MethodHandle finalSetter;
+    protected volatile Field finalField;
 
     VarHandleAccessor(Field field) {
-      super(field, -1);
+      super(field);
       handle = fieldHandle(field);
       isStatic = Modifier.isStatic(field.getModifiers());
       isFinal = Modifier.isFinal(field.getModifiers());
     }
 
-    private static MethodHandle createFinalSetter(Field field) {
+    private static Field createFinalField(Field field) {
       try {
         field.setAccessible(true);
-        return privateLookup(field).unreflectSetter(field);
-      } catch (IllegalAccessException | RuntimeException e) {
+        return field;
+      } catch (RuntimeException e) {
         throw finalMutationFailure(field, e);
       }
     }
 
-    private MethodHandle finalSetter(Throwable cause) {
+    private Field finalField(Throwable cause) {
       if (isStatic || !isFinal) {
         throw unsupportedWrite(field, cause);
       }
-      MethodHandle setter = finalSetter;
+      Field setter = finalField;
       if (setter == null) {
-        setter = createFinalSetter(field);
-        finalSetter = setter;
+        setter = createFinalField(field);
+        finalField = setter;
       }
       return setter;
     }
 
     protected void setFinal(Object obj, Object value, Throwable cause) {
-      MethodHandle setter = finalSetter(cause);
+      Field setter = finalField(cause);
       checkObj(obj);
       try {
-        setter.invoke(obj, value);
-      } catch (Throwable e) {
+        setter.set(obj, value);
+      } catch (IllegalAccessException | IllegalArgumentException e) {
         throw finalMutationFailure(field, e);
       }
     }
 
     protected void setFinalBoolean(Object obj, boolean value, Throwable cause) {
-      MethodHandle setter = finalSetter(cause);
+      Field setter = finalField(cause);
       checkObj(obj);
       try {
-        setter.invoke(obj, value);
-      } catch (Throwable e) {
+        setter.setBoolean(obj, value);
+      } catch (IllegalAccessException | IllegalArgumentException e) {
         throw finalMutationFailure(field, e);
       }
     }
 
     protected void setFinalByte(Object obj, byte value, Throwable cause) {
-      MethodHandle setter = finalSetter(cause);
+      Field setter = finalField(cause);
       checkObj(obj);
       try {
-        setter.invoke(obj, value);
-      } catch (Throwable e) {
+        setter.setByte(obj, value);
+      } catch (IllegalAccessException | IllegalArgumentException e) {
         throw finalMutationFailure(field, e);
       }
     }
 
     protected void setFinalChar(Object obj, char value, Throwable cause) {
-      MethodHandle setter = finalSetter(cause);
+      Field setter = finalField(cause);
       checkObj(obj);
       try {
-        setter.invoke(obj, value);
-      } catch (Throwable e) {
+        setter.setChar(obj, value);
+      } catch (IllegalAccessException | IllegalArgumentException e) {
         throw finalMutationFailure(field, e);
       }
     }
 
     protected void setFinalShort(Object obj, short value, Throwable cause) {
-      MethodHandle setter = finalSetter(cause);
+      Field setter = finalField(cause);
       checkObj(obj);
       try {
-        setter.invoke(obj, value);
-      } catch (Throwable e) {
+        setter.setShort(obj, value);
+      } catch (IllegalAccessException | IllegalArgumentException e) {
         throw finalMutationFailure(field, e);
       }
     }
 
     protected void setFinalInt(Object obj, int value, Throwable cause) {
-      MethodHandle setter = finalSetter(cause);
+      Field setter = finalField(cause);
       checkObj(obj);
       try {
-        setter.invoke(obj, value);
-      } catch (Throwable e) {
+        setter.setInt(obj, value);
+      } catch (IllegalAccessException | IllegalArgumentException e) {
         throw finalMutationFailure(field, e);
       }
     }
 
     protected void setFinalLong(Object obj, long value, Throwable cause) {
-      MethodHandle setter = finalSetter(cause);
+      Field setter = finalField(cause);
       checkObj(obj);
       try {
-        setter.invoke(obj, value);
-      } catch (Throwable e) {
+        setter.setLong(obj, value);
+      } catch (IllegalAccessException | IllegalArgumentException e) {
         throw finalMutationFailure(field, e);
       }
     }
 
     protected void setFinalFloat(Object obj, float value, Throwable cause) {
-      MethodHandle setter = finalSetter(cause);
+      Field setter = finalField(cause);
       checkObj(obj);
       try {
-        setter.invoke(obj, value);
-      } catch (Throwable e) {
+        setter.setFloat(obj, value);
+      } catch (IllegalAccessException | IllegalArgumentException e) {
         throw finalMutationFailure(field, e);
       }
     }
 
     protected void setFinalDouble(Object obj, double value, Throwable cause) {
-      MethodHandle setter = finalSetter(cause);
+      Field setter = finalField(cause);
       checkObj(obj);
       try {
-        setter.invoke(obj, value);
-      } catch (Throwable e) {
+        setter.setDouble(obj, value);
+      } catch (IllegalAccessException | IllegalArgumentException e) {
         throw finalMutationFailure(field, e);
       }
     }
@@ -627,43 +313,6 @@ public abstract class FieldAccessor {
     }
   }
 
-  public static class BooleanGetter extends FieldGetter {
-    private final Predicate getter;
-    private final MethodHandle getterHandle;
-
-    public BooleanGetter(Field field, Predicate getter) {
-      super(field, getter);
-      this.getter = getter;
-      getterHandle = null;
-      Preconditions.checkArgument(field.getType() == boolean.class);
-    }
-
-    private BooleanGetter(Field field, MethodHandle getter) {
-      super(field, getter);
-      this.getter = null;
-      getterHandle = getter;
-      Preconditions.checkArgument(field.getType() == boolean.class);
-    }
-
-    @Override
-    public Boolean get(Object obj) {
-      return getBoolean(obj);
-    }
-
-    @Override
-    public boolean getBoolean(Object obj) {
-      checkObj(obj);
-      if (getterHandle == null) {
-        return getter.test(obj);
-      }
-      try {
-        return (boolean) getterHandle.invoke(obj);
-      } catch (Throwable e) {
-        throw getterFailure(field, e);
-      }
-    }
-  }
-
   /** Primitive byte accessor. */
   public static class ByteAccessor extends VarHandleAccessor {
     public ByteAccessor(Field field) {
@@ -705,44 +354,6 @@ public abstract class FieldAccessor {
         }
       } catch (UnsupportedOperationException e) {
         setFinalByte(obj, value, e);
-      }
-    }
-  }
-
-  public static class ByteGetter extends FieldGetter {
-
-    private final ToByteFunction getter;
-    private final MethodHandle getterHandle;
-
-    public ByteGetter(Field field, ToByteFunction getter) {
-      super(field, getter);
-      this.getter = getter;
-      getterHandle = null;
-      Preconditions.checkArgument(field.getType() == byte.class);
-    }
-
-    private ByteGetter(Field field, MethodHandle getter) {
-      super(field, getter);
-      this.getter = null;
-      getterHandle = getter;
-      Preconditions.checkArgument(field.getType() == byte.class);
-    }
-
-    @Override
-    public Byte get(Object obj) {
-      return getByte(obj);
-    }
-
-    @Override
-    public byte getByte(Object obj) {
-      checkObj(obj);
-      if (getterHandle == null) {
-        return getter.applyAsByte(obj);
-      }
-      try {
-        return (byte) getterHandle.invoke(obj);
-      } catch (Throwable e) {
-        throw getterFailure(field, e);
       }
     }
   }
@@ -792,43 +403,6 @@ public abstract class FieldAccessor {
     }
   }
 
-  public static class CharGetter extends FieldGetter {
-    private final ToCharFunction getter;
-    private final MethodHandle getterHandle;
-
-    public CharGetter(Field field, ToCharFunction getter) {
-      super(field, getter);
-      this.getter = getter;
-      getterHandle = null;
-      Preconditions.checkArgument(field.getType() == char.class);
-    }
-
-    private CharGetter(Field field, MethodHandle getter) {
-      super(field, getter);
-      this.getter = null;
-      getterHandle = getter;
-      Preconditions.checkArgument(field.getType() == char.class);
-    }
-
-    @Override
-    public Character get(Object obj) {
-      return getChar(obj);
-    }
-
-    @Override
-    public char getChar(Object obj) {
-      checkObj(obj);
-      if (getterHandle == null) {
-        return getter.applyAsChar(obj);
-      }
-      try {
-        return (char) getterHandle.invoke(obj);
-      } catch (Throwable e) {
-        throw getterFailure(field, e);
-      }
-    }
-  }
-
   /** Primitive short accessor. */
   public static class ShortAccessor extends VarHandleAccessor {
     public ShortAccessor(Field field) {
@@ -870,43 +444,6 @@ public abstract class FieldAccessor {
         }
       } catch (UnsupportedOperationException e) {
         setFinalShort(obj, value, e);
-      }
-    }
-  }
-
-  public static class ShortGetter extends FieldGetter {
-    private final ToShortFunction getter;
-    private final MethodHandle getterHandle;
-
-    public ShortGetter(Field field, ToShortFunction getter) {
-      super(field, getter);
-      this.getter = getter;
-      getterHandle = null;
-      Preconditions.checkArgument(field.getType() == short.class);
-    }
-
-    private ShortGetter(Field field, MethodHandle getter) {
-      super(field, getter);
-      this.getter = null;
-      getterHandle = getter;
-      Preconditions.checkArgument(field.getType() == short.class);
-    }
-
-    @Override
-    public Short get(Object obj) {
-      return getShort(obj);
-    }
-
-    @Override
-    public short getShort(Object obj) {
-      checkObj(obj);
-      if (getterHandle == null) {
-        return getter.applyAsShort(obj);
-      }
-      try {
-        return (short) getterHandle.invoke(obj);
-      } catch (Throwable e) {
-        throw getterFailure(field, e);
       }
     }
   }
@@ -956,43 +493,6 @@ public abstract class FieldAccessor {
     }
   }
 
-  public static class IntGetter extends FieldGetter {
-    private final ToIntFunction getter;
-    private final MethodHandle getterHandle;
-
-    public IntGetter(Field field, ToIntFunction getter) {
-      super(field, getter);
-      this.getter = getter;
-      getterHandle = null;
-      Preconditions.checkArgument(field.getType() == int.class);
-    }
-
-    private IntGetter(Field field, MethodHandle getter) {
-      super(field, getter);
-      this.getter = null;
-      getterHandle = getter;
-      Preconditions.checkArgument(field.getType() == int.class);
-    }
-
-    @Override
-    public Integer get(Object obj) {
-      return getInt(obj);
-    }
-
-    @Override
-    public int getInt(Object obj) {
-      checkObj(obj);
-      if (getterHandle == null) {
-        return getter.applyAsInt(obj);
-      }
-      try {
-        return (int) getterHandle.invoke(obj);
-      } catch (Throwable e) {
-        throw getterFailure(field, e);
-      }
-    }
-  }
-
   /** Primitive long accessor. */
   public static class LongAccessor extends VarHandleAccessor {
     public LongAccessor(Field field) {
@@ -1034,43 +534,6 @@ public abstract class FieldAccessor {
         }
       } catch (UnsupportedOperationException e) {
         setFinalLong(obj, value, e);
-      }
-    }
-  }
-
-  public static class LongGetter extends FieldGetter {
-    private final ToLongFunction getter;
-    private final MethodHandle getterHandle;
-
-    public LongGetter(Field field, ToLongFunction getter) {
-      super(field, getter);
-      this.getter = getter;
-      getterHandle = null;
-      Preconditions.checkArgument(field.getType() == long.class);
-    }
-
-    private LongGetter(Field field, MethodHandle getter) {
-      super(field, getter);
-      this.getter = null;
-      getterHandle = getter;
-      Preconditions.checkArgument(field.getType() == long.class);
-    }
-
-    @Override
-    public Long get(Object obj) {
-      return getLong(obj);
-    }
-
-    @Override
-    public long getLong(Object obj) {
-      checkObj(obj);
-      if (getterHandle == null) {
-        return getter.applyAsLong(obj);
-      }
-      try {
-        return (long) getterHandle.invoke(obj);
-      } catch (Throwable e) {
-        throw getterFailure(field, e);
       }
     }
   }
@@ -1120,43 +583,6 @@ public abstract class FieldAccessor {
     }
   }
 
-  public static class FloatGetter extends FieldGetter {
-    private final ToFloatFunction getter;
-    private final MethodHandle getterHandle;
-
-    public FloatGetter(Field field, ToFloatFunction getter) {
-      super(field, getter);
-      this.getter = getter;
-      getterHandle = null;
-      Preconditions.checkArgument(field.getType() == float.class);
-    }
-
-    private FloatGetter(Field field, MethodHandle getter) {
-      super(field, getter);
-      this.getter = null;
-      getterHandle = getter;
-      Preconditions.checkArgument(field.getType() == float.class);
-    }
-
-    @Override
-    public Float get(Object obj) {
-      return getFloat(obj);
-    }
-
-    @Override
-    public float getFloat(Object obj) {
-      checkObj(obj);
-      if (getterHandle == null) {
-        return getter.applyAsFloat(obj);
-      }
-      try {
-        return (float) getterHandle.invoke(obj);
-      } catch (Throwable e) {
-        throw getterFailure(field, e);
-      }
-    }
-  }
-
   /** Primitive double accessor. */
   public static class DoubleAccessor extends VarHandleAccessor {
     public DoubleAccessor(Field field) {
@@ -1202,43 +628,6 @@ public abstract class FieldAccessor {
     }
   }
 
-  public static class DoubleGetter extends FieldGetter {
-    private final ToDoubleFunction getter;
-    private final MethodHandle getterHandle;
-
-    public DoubleGetter(Field field, ToDoubleFunction getter) {
-      super(field, getter);
-      this.getter = getter;
-      getterHandle = null;
-      Preconditions.checkArgument(field.getType() == double.class);
-    }
-
-    private DoubleGetter(Field field, MethodHandle getter) {
-      super(field, getter);
-      this.getter = null;
-      getterHandle = getter;
-      Preconditions.checkArgument(field.getType() == double.class);
-    }
-
-    @Override
-    public Double get(Object obj) {
-      return getDouble(obj);
-    }
-
-    @Override
-    public double getDouble(Object obj) {
-      checkObj(obj);
-      if (getterHandle == null) {
-        return getter.applyAsDouble(obj);
-      }
-      try {
-        return (double) getterHandle.invoke(obj);
-      } catch (Throwable e) {
-        throw getterFailure(field, e);
-      }
-    }
-  }
-
   /** Object accessor. */
   public static class ObjectAccessor extends VarHandleAccessor {
     public ObjectAccessor(Field field) {
@@ -1270,62 +659,6 @@ public abstract class FieldAccessor {
         }
       } catch (UnsupportedOperationException e) {
         setFinal(obj, value, e);
-      }
-    }
-  }
-
-  public static class ObjectGetter extends FieldGetter {
-    private final Function getter;
-    private final MethodHandle getterHandle;
-
-    public ObjectGetter(Field field, Function getter) {
-      super(field, getter);
-      this.getter = getter;
-      getterHandle = null;
-      Preconditions.checkArgument(!field.getType().isPrimitive(), field);
-    }
-
-    private ObjectGetter(Field field, MethodHandle getter) {
-      super(field, getter);
-      this.getter = null;
-      getterHandle = getter;
-      Preconditions.checkArgument(!field.getType().isPrimitive(), field);
-    }
-
-    @Override
-    public Object get(Object obj) {
-      checkObj(obj);
-      if (getterHandle == null) {
-        return getter.apply(obj);
-      }
-      try {
-        return getterHandle.invoke(obj);
-      } catch (Throwable e) {
-        throw getterFailure(field, e);
-      }
-    }
-  }
-
-  static final class ReflectiveStaticFieldAccessor extends FieldAccessor {
-    ReflectiveStaticFieldAccessor(Field field) {
-      super(field, -1);
-    }
-
-    @Override
-    public Object get(Object obj) {
-      try {
-        return field.get(null);
-      } catch (IllegalAccessException | IllegalArgumentException e) {
-        throw new ForyException("Failed to read static field reflectively: " + field, e);
-      }
-    }
-
-    @Override
-    public void set(Object obj, Object value) {
-      try {
-        field.set(null, value);
-      } catch (IllegalAccessException | IllegalArgumentException e) {
-        throw new ForyException("Failed to write static field reflectively: " + field, e);
       }
     }
   }
