@@ -49,12 +49,7 @@ libraryDependencies ++= Seq(
 
 Test / fork := true
 Test / javaOptions ++= Seq(
-  "--add-opens=java.base/java.lang=ALL-UNNAMED",
   "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-  "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED",
-  "--add-opens=java.base/java.util=ALL-UNNAMED",
-  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
 )
 
 lazy val writeTestClasspath = taskKey[File]("Writes the Scala test runtime classpath")
